# axum_oapi_generator

./: Cargo.toml
src/: generator.rs  main.rs
