[package]
name = "axum_oapi_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
heck = "0.4.1"
indexmap = { version = "2.2.3", features = ["serde"] }
openapiv3 = "2.0.0"
prettyplease = "0.2.16"
proc-macro2 = "1.0.78"
quote = "1.0.35"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
syn = { version = "2.0.48", features = ["full"] }
textwrap = "0.16.0"
